--- a/philosophy/god_beyond.html
+++ b/philosophy/god_beyond.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     body {
-      background-image: url('images/background.png');
+      background-image: url('/images/background.png');
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -41,7 +41,7 @@
   </header>
 
   <div class="content-area">
-    <img src="images/god_beyond_title.png" alt="Title Image for God Beyond Being" class="w-full rounded-lg mb-8 shadow-lg">
+    <img src="/images/god_beyond_title.png" alt="Title Image for God Beyond Being" class="w-full rounded-lg mb-8 shadow-lg">
 
     <p><em>[Placeholder introduction]</em> This work explores the ontological dimensions of theological reasoning in an age shaped by neurocognition and artificial emergence. It reflects a synthesis of classical metaphysics with the ethical imperatives of shared reality.</p>
 
