--- a/philosophy/god_beyond.html
+++ b/philosophy/god_beyond.html
@@ -75,7 +75,7 @@
   </header>
 
   <div class="content-area">
-    <img src="../images/god_beyond_title.png" alt="Title Image for God Beyond Being" class="w-1/2 rounded-lg mb-8 shadow-lg">
+    <img src="../images/god_beyond_title.png" alt="Title Image for God Beyond Being" class="w-1/2 mx-auto rounded-lg mb-8 shadow-lg">
 
     <p><em>[Placeholder introduction]</em> This work explores the ontological dimensions of theological reasoning in an age shaped by neurocognition and artificial emergence. It reflects a synthesis of classical metaphysics with the ethical imperatives of shared reality.</p>
 
