--- a/philosophy/god_beyond.html
+++ b/philosophy/god_beyond.html
@@ -42,7 +42,7 @@
   <header class="flex items-center justify-between px-4 py-6 sm:px-8">
     <!-- Left: Logo -->
     <a href="index.html">
-      <img src="images/logo.png" alt="Sympnoia Logo" class="h-24 w-auto">
+      <img src="../images/logo.png" alt="Sympnoia Logo" class="h-24 w-auto">
     </a>
 
     <!-- Center: Title & Subtitle -->
@@ -53,7 +53,7 @@
 
     <!-- Right: Menu Icon -->
     <button class="sm:block">
-      <img src="images/navigation.png" alt="Menu" class="h-8 w-auto">
+      <img src="../images/navigation.png" alt="Menu" class="h-8 w-auto">
     </button>
   </header>
 
