--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Sympnoia
-subtitle: Breathing Together: An Ethical Framework for Shared Existence
+title: "Sympnoia"
+subtitle: "Breathing Together: An Ethical Framework for Shared Existence"
 ---
 
 <style>
