--- a/philosophy.html
+++ b/philosophy.html
@@ -5,42 +5,35 @@ subtitle: "Explorations of Ground, Being, and Shared Reality"
 ---
 
 <style>
-  /* page‑specific styling for entry cards */
+  /* page‑specific image styling */
   .entry-image {
-    max-width: 220px;
+    width: 100%;
     height: auto;
-    object-fit: cover;
     border-radius: 0.75rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 8px rgba(0,0,0,.35);
   }
 </style>
 
-<main class="grid gap-10 px-8 pb-16">
-  <!-- Entry 1 -->
-  <div class="grid grid-cols-1 lg:grid-cols-[1fr_1.618fr] gap-6 items-center">
-    <div class="flex justify-center">
-      <img src="images/god_beyond_title.png" alt="Paper Image 1" class="entry-image w-full">
-    </div>
-    <div>
-      <a href="philosophy/god_beyond.html" class="text-2xl font-semibold text-yellow-100 hover:underline">God Beyond Being</a>
-      <p class="mt-2 text-base text-gray-200">
-        This work explores the metaphysical and theological implications of asking the question of questions: What is the root of existence itself? It argues that the foundation of all that is must lie beyond perceivable being itself—
-        a metaphysical Ground that gives rise to existence, intelligibility, and relation. Through rigorous reasoning, it reframes the concept of divinity not as a supreme being, but as the enabling condition of reality. Rooted in the ethos of
-        Sympnoia, it calls for a theology grounded not in dogma, but in shared, rational inquiry into the deepest structures of existence.
+<main class="max-w-6xl mx-auto px-6 pb-20 space-y-24">
+  <!-- Entry 1 (image left, text right) -->
+  <article class="grid grid-cols-1 lg:grid-cols-5 gap-10 items-center">
+    <img src="images/god_beyond_title.png" alt="Cover of God Beyond Being" class="entry-image lg:col-span-2">
+    <div class="lg:col-span-3">
+      <h2 class="text-2xl font-bold mb-4">God Beyond Being</h2>
+      <p>
+        This work explores the metaphysical and theological implications of asking the question of questions: What is the root of existence itself? It argues that the foundation of all that is must lie beyond perceivable being itself—a metaphysical Ground that gives rise to existence, intelligibility, and relation. Through rigorous reasoning, it reframes the concept of divinity not as a supreme being, but as the enabling condition of reality. Rooted in the ethos of Sympnoia, it calls for a theology grounded not in dogma, but in shared, rational inquiry into the deepest structures of existence.
       </p>
     </div>
-  </div>
+  </article>
 
-  <!-- Entry 2 (zig‑zag layout) -->
-  <div class="grid grid-cols-1 lg:grid-cols-[1.618fr_1fr] gap-6 items-center">
-    <div class="flex flex-col justify-center">
-      <a href="paper2.html" class="text-2xl font-semibold text-yellow-100 hover:underline mb-2">Another Paper Title</a>
-      <p class="text-base text-gray-200">
+  <!-- Entry 2 (image right, text left) -->
+  <article class="grid grid-cols-1 lg:grid-cols-5 gap-10 items-center">
+    <div class="lg:col-span-3 order-last lg:order-first">
+      <h2 class="text-2xl font-bold mb-4">Another Paper Title</h2>
+      <p>
         Another short description that introduces the theme of the second paper, elaborating its relevance and philosophical grounding within the Sympnoia ethos.
       </p>
     </div>
-    <div class="flex justify-center">
-      <img src="images/placeholder2.png" alt="Paper Image 2" class="entry-image w-full">
-    </div>
-  </div>
+    <img src="images/paper2.png" alt="Paper Image 2" class="entry-image lg:col-span-2 order-first lg:order-last">
+  </article>
 </main>
