--- a/writings.html
+++ b/writings.html
@@ -1,126 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sympnoia | Writings</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <style>
-    body {
-      background-image: url('images/background.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: center;
-      color: #e8e4d8;
-      font-family: 'Georgia', serif;
-    }
-    .hover-image:hover img {
-      filter: none;
-      transform: scale(1.03);
-    }
-    .hover-image img {
-      transition: all 1s ease;
-      filter: sepia(40%) brightness(85%) saturate(60%);
-      border-radius: 1rem;
-    }
-    .image-overlay {
-      position: absolute;
-      inset: 0;
-      background-color: rgba(27, 58, 26, 0.35);
-      border-radius: 1rem;
-      z-index: 1;
-      transition: background-color 0.5s ease;
-    }
-    .hover-image:hover .image-overlay {
-      background-color: rgba(27, 58, 26, 0);
-    }
-.site-title {
-      font-family: 'Cormorant Garamond', serif;
-      color: #d7c49e;
-    }
-.menu-entry {
-    color: #d7c49e; 
-    font-family: 'Georgia', serif;
-  }
-  .menu-entry:hover {
-    color: #e96f1f; 
-  }
-  </style>
-</head>
+---
+layout: default
+title: "Writings"
+subtitle: "Prose and Theoretical Explorations in Ethical Coexistence"
+---
 
+<main class="grid grid-cols-1 sm:grid-cols-2 gap-6 p-6 max-w-4xl mx-auto pb-20">
+  <!-- Philosophy tile -->
+  <a href="philosophy.html" class="hover-image group block relative max-w-md mx-auto">
+    <img src="images/Philosophy.png" alt="Philosophy" class="w-full h-auto shadow-md">
+    <div class="image-overlay"></div>
+  </a>
 
-<body class="bg-transparent">
-  <header class="flex items-center justify-between px-4 py-6 sm:px-8">
-    <!-- Left: Logo -->
-    <a href="index.html">
-      <img src="images/logo.png" alt="Sympnoia Logo" class="h-24 w-auto">
-    </a>
-
-    <!-- Center: Title & Subtitle -->
-    <div class="text-center flex-1">
-      <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold tracking-tight site-title">Writings</h1>
-      <p class="mt-1 text-sm sm:text-base site-title">Prose and Theoretical Explorations in Ethical Coexistence</p>
-    </div>
-
-    <!-- Right: Menu Icon -->
-    <button class="sm:block">
-      <img src="images/navigation.png" alt="Menu" class="h-8 w-auto">
-    </button>
-  </header>
-
- <!-- Navigation Menu Side Panel -->
-
-<div id="navModal" class="fixed top-20 right-4 sm:right-8 md:right-10 z-50 hidden w-24">
-  <div class="bg-[#1e1e1e]/90 rounded-xl shadow-lg p-6 w-64">
-    <ul class="space-y-3">
-     <li><a href="index.html" class="menu-entry">Home</a></li>
-<li><a href="writings.html" class="menu-entry">Writings</a></li>
-<li><a href="prose.html" class="menu-entry">↳ Prose</a></li>
-<li><a href="philosophy.html" class="menu-entry">↳ Philosophy</a></li>
-<li><a href="blog.html" class="menu-entry">Blog</a></li>
-<li><a href="gallery.html" class="menu-entry">Gallery</a></li>
-<li><a href="glossary.html" class="menu-entry">Glossary</a></li>
-    </ul>
-  </div>
-</div>
-
-  <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-6 p-6">
-    <a href="philosophy.html" class="hover-image group block relative max-w-md mx-auto">
-      <img src="images/Philosophy.png" alt="Prose" class="w-full h-auto shadow-md">
-      <div class="image-overlay"></div>
-      <div class="absolute inset-0 flex items-center justify-center z-10">
-        <!-- Optional hover text if needed -->
-      </div>
-    </a>
-    <a href="prose.html" class="hover-image group block relative max-w-md mx-auto">
-      <img src="images/Prose.png" alt="Theoretical" class="w-full h-auto shadow-md">
-      <div class="image-overlay"></div>
-      <div class="absolute inset-0 flex items-center justify-center z-10">
-        <!-- Optional hover text if needed -->
-      </div>
-    </a>
-  </main>
-
-  <footer class="text-center py-8 text-sm text-gray-600">
-    &copy; 2025 Sympnoia. All rights reserved.
-  </footer>
-
-<script>
-  const menuBtn = document.querySelector("header button");
-  const navModal = document.getElementById("navModal");
-
-  menuBtn.addEventListener("click", () => {
-    navModal.classList.toggle("hidden");
-  });
-
-  // Optional: Close the modal if clicked outside or ESC
-  document.addEventListener("keydown", (e) => {
-    if (e.key === "Escape") {
-      navModal.classList.add("hidden");
-    }
-  });
-</script>
-</body>
-</html>
-
+  <!-- Prose tile -->
+  <a href="prose.html" class="hover-image group block relative max-w-md mx-auto">
+    <img src="images/Prose.png" alt="Prose" class="w-full h-auto shadow-md">
+    <div class="image-overlay"></div>
+  </a>
+</main>
