--- a/writings.html
+++ b/writings.html
@@ -4,7 +4,7 @@ title: "Writings"
 subtitle: "Prose and Theoretical Explorations in Ethical Coexistence"
 ---
 
-<main class="grid grid-cols-1 sm:grid-cols-2 gap-6 p-6 max-w-4xl mx-auto pb-20">
+<main class="grid grid-cols-1 sm:grid-cols-2 gap-x-8 gap-y-14 p-6 max-w-4xl mx-auto pb-20">
   <!-- Philosophy tile -->
   <a href="philosophy.html" class="hover-image group block relative max-w-md mx-auto">
     <img src="images/Philosophy.png" alt="Philosophy" class="w-full h-auto shadow-md">
