--- a/philosophy.html
+++ b/philosophy.html
@@ -17,7 +17,7 @@ subtitle: "Explorations of Ground, Being, and Shared Reality"
 <main class="max-w-6xl mx-auto px-6 pb-20 space-y-24">
   <!-- Entry 1 (image left, text right) -->
 
-  !-- Entry 1 (image left, text right) -->
+  <!-- Entry 1 (image left, text right) -->
 <article class="grid grid-cols-1 lg:grid-cols-5 gap-6 items-start">
   <!-- Cover image (clickable) -->
   <a href="god_beyond.html" class="lg:col-span-2 block">
