--- a/philosophy/god_beyond.html
+++ b/philosophy/god_beyond.html
@@ -1,109 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+title: God Beyond Being
+subtitle: A Rational Theological Inquiry into the Ground of Grounds
+---
 
+<div class="content-area">
+  <img src="../images/god_beyond_title.png" alt="Title Image for God Beyond Being" class="w-1/2 mx-auto rounded-lg mb-8 shadow-lg">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>God Beyond Being | Sympnoia</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <style>
-    body {
-      background-image: url('../images/background.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: center;
-      color: #e8e4d8;
-      font-family: 'Georgia', serif;
-    }
-    .content-area {
-      max-width: 48rem; /* roughly 768px = Tailwind's max-w-3xl */
-      margin-left: auto;
-      margin-right: auto;
-      padding: 2rem;
-      background-color: rgba(0, 0, 0, 0.6);
-      border-radius: 1rem;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
-    }
-    .content-area h2, .content-area h3 {
-      margin-top: 1.5rem;
-      font-weight: bold;
-    }
-    .content-area p {
-      margin-top: 1rem;
-      line-height: 1.7;
-    }
-  </style>
-</head>
+  <p><em>[Placeholder introduction]</em> This work explores the ontological dimensions of theological reasoning in an age shaped by neurocognition and artificial emergence. It reflects a synthesis of classical metaphysics with the ethical imperatives of shared reality.</p>
 
-
-<body class="bg-transparent">
-  <header class="flex items-center justify-between px-4 py-6 sm:px-8">
-    <!-- Left: Logo -->
-    <a href="../index.html">
-      <img src="../images/logo.png" alt="Sympnoia Logo" class="h-24 w-auto">
-    </a>
-
-    <!-- Center: Title & Subtitle -->
-    <div class="text-center flex-1">
-      <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold tracking-tight site-title">God Beyond Being</h1>
-      <p class="mt-1 text-sm sm:text-base site-title">A Rational Theological Inquiry into the Ground of Grounds</p>
-    </div>
-
-    <!-- Right: Menu Icon -->
-    <button class="sm:block">
-      <img src="../images/navigation.png" alt="Menu" class="h-8 w-auto">
-    </button>
-  </header>
-
- <!-- Navigation Menu Side Panel -->
-
-<div id="navModal" class="fixed top-20 right-4 sm:right-8 md:right-10 z-50 hidden w-24">
-  <div class="bg-[#1e1e1e]/90 rounded-xl shadow-lg p-6 w-64">
-    <ul class="space-y-3">
-     <li><a href="../index.html" class="menu-entry">Home</a></li>
-<li><a href="../writings.html" class="menu-entry">Writings</a></li>
-<li><a href="../philosophy.html" class="menu-entry">↳ Philosophy</a></li>
-<li><a href="../prose.html" class="menu-entry">↳ Prose</a></li>
-<li><a href="../blog.html" class="menu-entry">Blog</a></li>
-<li><a href="../gallery.html" class="menu-entry">Gallery</a></li>
-<li><a href="../glossary.html" class="menu-entry">Glossary</a></li>
-    </ul>
-  </div>
+  <!-- Full paper content will be inserted or written here -->
+  <p>[Full content coming soon...]</p>
 </div>
-  </header>
-
-  <div class="content-area">
-    <img src="../images/god_beyond_title.png" alt="Title Image for God Beyond Being" class="w-1/2 mx-auto rounded-lg mb-8 shadow-lg">
-
-    <p><em>[Placeholder introduction]</em> This work explores the ontological dimensions of theological reasoning in an age shaped by neurocognition and artificial emergence. It reflects a synthesis of classical metaphysics with the ethical imperatives of shared reality.</p>
-
-    <!-- Full paper content will be inserted or written here -->
-    <p>[Full content coming soon...]</p>
-  </div>
-
-  <footer class="text-center py-8 text-sm text-gray-500">
-    &copy; 2025 Sympnoia. All rights reserved.
-  </footer>
-
-<script>
-  const menuBtn = document.querySelector("header button");
-  const navModal = document.getElementById("navModal");
-
-  menuBtn.addEventListener("click", () => {
-    navModal.classList.toggle("hidden");
-  });
-
-  // Optional: Close the modal if clicked outside or ESC
-  document.addEventListener("keydown", (e) => {
-    if (e.key === "Escape") {
-      navModal.classList.add("hidden");
-    }
-  });
-</script>
-
-
-</body>
-</html>
-
