--- a/philosophy/god_beyond.html
+++ b/philosophy/god_beyond.html
@@ -4,11 +4,11 @@ title: God Beyond Being
 subtitle: A Rational Theological Inquiry into the Ground of Grounds
 ---
 
-<div class="content-area">
+<main class="px-6 py-8 max-w-4xl mx-auto">
   <img src="../images/god_beyond_title.png" alt="Title Image for God Beyond Being" class="w-1/2 mx-auto rounded-lg mb-8 shadow-lg">
 
-  <p><em>[Placeholder introduction]</em> This work explores the ontological dimensions of theological reasoning in an age shaped by neurocognition and artificial emergence. It reflects a synthesis of classical metaphysics with the ethical imperatives of shared reality.</p>
+  <p class="mb-6"><em>[Placeholder introduction]</em> This work explores the ontological dimensions of theological reasoning in an age shaped by neurocognition and artificial emergence. It reflects a synthesis of classical metaphysics with the ethical imperatives of shared reality.</p>
 
   <!-- Full paper content will be inserted or written here -->
-  <p>[Full content coming soon...]</p>
-</div>
+  <p class="text-gray-300">[Full content coming soon...]</p>
+</main>
