--- a/philosophy/god_beyond.html
+++ b/philosophy/god_beyond.html
@@ -4,6 +4,24 @@ title: God Beyond Being
 subtitle: A Rational Theological Inquiry into the Ground of Grounds
 ---
 
+<style>
+  main {
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 1rem;
+    padding: 2rem;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+  }
+
+  main p {
+    line-height: 1.7;
+  }
+
+  main h2, main h3 {
+    margin-top: 1.5rem;
+    font-weight: bold;
+  }
+</style>
+
 <main class="px-6 py-8 max-w-4xl mx-auto">
   <img src="../images/god_beyond_title.png" alt="Title Image for God Beyond Being" class="w-1/2 mx-auto rounded-lg mb-8 shadow-lg">
 
