--- a/philosophy/god_beyond.html
+++ b/philosophy/god_beyond.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: God Beyond Being
-subtitle: A Rational Theological Inquiry into the Ground of Grounds
+title: "God Beyond Being"
+subtitle: "A Rational Theological Inquiry into the Ground of Grounds"
 ---
 
 <style>
