--- a/god_beyond.html
+++ b/god_beyond.html
@@ -24,7 +24,7 @@ subtitle: "A Rational Theological Inquiry into the Ground of Grounds"
 </style>
 
 <main class="content-box px-6 py-8 max-w-4xl mx-auto">
-  <img src="../images/god_beyond_title.png" alt="Title Image for God Beyond Being" class="w-1/2 mx-auto rounded-lg mb-8 shadow-lg">
+  <img src="{{ '/images/god_beyond_title.png' | relative_url }}" alt="Title Image for God Beyond Being" class="w-1/2 mx-auto rounded-lg mb-8 shadow-lg">
 
   <p class="mb-6"><em>[Placeholder introduction]</em> This work explores the ontological dimensions of theological reasoning in an age shaped by neurocognition and artificial emergence. It reflects a synthesis of classical metaphysics with the ethical imperatives of shared reality.</p>
 
