Update and rename god_beyond.html to philosophy/god_beyond.html

--- a/philosophy/god_beyond.html
+++ b/philosophy/god_beyond.html
@@ -7,7 +7,8 @@ subtitle: "A Rational Theological Inquiry into the Ground of Grounds"
 <style>
   .content-box {
    
-    background-color: rgba(0, 0, 0, 0.6);
+   background-color: #1e2a1e;   /* deep olive */
+   color: #f1e9d2;              /* warm ivory text */
     border-radius: 1rem;
     padding: 2rem;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
@@ -29,5 +30,5 @@ subtitle: "A Rational Theological Inquiry into the Ground of Grounds"
   <p class="mb-6"><em>[Placeholder introduction]</em> This work explores the ontological dimensions of theological reasoning in an age shaped by neurocognition and artificial emergence. It reflects a synthesis of classical metaphysics with the ethical imperatives of shared reality.</p>
 
   <!-- Full paper content will be inserted or written here -->
-  <p class="text-gray-300">[Full content coming soon...]</p>
+  <p>[Full content coming soon...]</p>
 </main>
