--- a/philosophy.html
+++ b/philosophy.html
@@ -19,7 +19,7 @@ subtitle: "Explorations of Ground, Being, and Shared Reality"
 
 <article class="grid grid-cols-1 lg:grid-cols-5 gap-6 items-start">
   <!-- Cover image (clickable) -->
-  <a href="god_beyond.html" class="lg:col-span-2 block">
+  <a href="philosophy/god_beyond.html" class="lg:col-span-2 block">
     <img
       src="images/god_beyond_title.png"
       alt="Cover of God Beyond Being"
