--- a/philosophy.html
+++ b/philosophy.html
@@ -30,7 +30,7 @@ subtitle: "Explorations of Ground, Being, and Shared Reality"
   <!-- Text block -->
   <div class="lg:col-span-3">
     <h2 class="text-2xl font-bold mb-4">
-      <a href="/philosophy/god_beyond.html" class="hover:underline">
+   <a href="{{ '/philosophy/god_beyond/' | relative_url }}" class="hover:underline">
         God Beyond Being
       </a>
     </h2>
