--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@ subtitle: "Image Collection"
     <div id="prev-preview" class="preview cursor-pointer hidden md:block">
       <img loading="lazy" />
     </div>
-      <div class="relative flex flex-col items-center max-w-[90vw] max-h-[90vh]">
+     <div class="flex-1 flex flex-col items-center justify-center max-w-[85vw] max-h-[85vh] overflow-auto">
         <div id="modal-title" class="mb-2 text-center"></div>
         <div id="modal-tags" class="flex gap-2 my-2 flex-wrap justify-center"></div>
         <!-- Limit image size so title and tags remain visible -->
