--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,8 @@ subtitle: "Image Collection"
         <div id="modal-title" class="mb-2 text-center"></div>
         <div id="modal-tags" class="flex gap-2 my-2 flex-wrap justify-center"></div>
         <!-- Limit image size so title and tags remain visible -->
-        <img id="modal-img" class="w-auto h-auto max-w-full max-h-full object-contain rounded-lg shadow-lg" loading="lazy">
+       <img id="modal-img" class="rounded-lg shadow-lg" loading="lazy">
+
         <button id="prev-btn" class="absolute left-0 top-1/2 -translate-y-1/2 text-white text-4xl px-2" aria-label="Previous">&#10094;</button>
       <button id="next-btn" class="absolute right-0 top-1/2 -translate-y-1/2 text-white text-4xl px-2" aria-label="Next">&#10095;</button>
     </div>
@@ -130,6 +131,16 @@ subtitle: "Image Collection"
     color: white;
     cursor: pointer;
   }
+
+#modal-img {
+  max-width: 70vw;
+  max-height: 80vh;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+}
+
+
 </style>
 
 <script>
