--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@ subtitle: "Image Collection"
 
 <div id="tag-filters" class="p-4 flex flex-wrap gap-4 justify-center"></div>
 <div id="gallery" class="gallery"></div>
-<div id="image-modal" class="fixed inset-0 bg-black/70 hidden z-50 flex items-center justify-center p-4 backdrop-blur-md" style="background-image: url('{{ '/images/background.png' | relative_url }}'); background-size: cover; background-position: center;">
+<div id="image-modal" class="fixed inset-0 bg-black/70 hidden z-50 flex items-center justify-center p-4 backdrop-blur-md">
   <button id="close-modal" class="absolute top-4 right-4 text-3xl text-white">&times;</button>
   <div class="flex items-center gap-2 w-full justify-between">
     <div id="prev-preview" class="preview cursor-pointer hidden md:block">
@@ -27,84 +27,7 @@ subtitle: "Image Collection"
   </div>
 </div>
 
-<style>
-  #tag-filters label,
-  #modal-tags label {
-    display: flex;
-    align-items: center;
-    margin-right: 0.5rem;
-  }
 
-  input.tag-checkbox {
-    appearance: none;
-    width: 1rem;
-    height: 1rem;
-    margin-right: 0.25rem;
-    border-radius: 0.25rem;
-    border: 1px solid #d7c49e;
-    background-color: #d7c49e;
-    position: relative;
-    cursor: pointer;
-  }
-
-  input.tag-checkbox:checked {
-    background-color: #e96f1f;
-  }
-
-  input.tag-checkbox:checked::after {
-    content: '\2713';
-    position: absolute;
-    top: -0.1rem;
-    left: 0.18rem;
-    color: #1e1e1e;
-    font-size: 0.75rem;
-  }
-
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 4px;
-    padding: 4px;
-  }
-
-  @media (min-width: 640px) {
-    .gallery {
-      grid-template-columns: repeat(3, 1fr);
-    }
-  }
-
-  @media (min-width: 1024px) {
-    .gallery {
-      grid-template-columns: repeat(5, 1fr);
-    }
-  }
-
-  .tile {
-    position: relative;
-    width: 100%;
-    padding-top: 100%;
-    overflow: hidden;
-    cursor: pointer;
-  }
-
-  .tile img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-
- 
-
-
-
-
-
-
-</style>
 
 <script>
 document.addEventListener('DOMContentLoaded', function () {
