Align reset button color

--- a/gallery.html
+++ b/gallery.html
@@ -112,7 +112,7 @@ document.addEventListener('DOMContentLoaded', function () {
     .forEach(tag => filtersEl.appendChild(createBtn(tag)));
 
   const resetBtn = createBtn('', 'Reset');
-  resetBtn.classList.add('font-semibold', 'bg-[#c8b88a]');
+  resetBtn.classList.add('font-semibold', 'bg-[#b8a06f]');
   const invertBtn = createBtn('', 'Invert');
   invertBtn.classList.add('font-semibold', 'bg-[#b8a06f]');
   controlsEl.appendChild(resetBtn);
