--- a/gallery.html
+++ b/gallery.html
@@ -112,9 +112,9 @@ document.addEventListener('DOMContentLoaded', function () {
     .forEach(tag => filtersEl.appendChild(createBtn(tag)));
 
   const resetBtn = createBtn('', 'Reset');
-  resetBtn.classList.add('font-semibold', 'bg-[#b8a06f]');
+  resetBtn.classList.add('font-semibold', 'bg-[#d7c49e]');
   const invertBtn = createBtn('', 'Invert');
-  invertBtn.classList.add('font-semibold', 'bg-[#b8a06f]');
+  invertBtn.classList.add('font-semibold', 'bg-[#d7c49e]');
   controlsEl.appendChild(resetBtn);
   controlsEl.appendChild(invertBtn);
 
